# armBot

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  run.sh
src/armbot_bringup/: package.xml
src/armbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/armbot_controller/: CMakeLists.txt  armbot_controller.xml  package.xml
src/armbot_controller/armbot_controller/: slider_control.py
src/armbot_controller/config/: armbot_controllers.yaml  gz_bridge.yaml
src/armbot_controller/launch/: controller.launch.py  slider_controller.launch.py
src/armbot_controller/src/: armbot_interface.cpp  slider_control.cpp
src/armbot_cpp_examples/: CMakeLists.txt  package.xml
src/armbot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_service_client.cpp  simple_service_server.cpp
src/armbot_description/: CMakeLists.txt  package.xml
src/armbot_description/launch/: display.launch.py  gazebo.launch.py
src/armbot_description/rviz/: display.rviz
src/armbot_firmware/: CMakeLists.txt  package.xml
src/armbot_moveit/: package.xml
src/armbot_msgs/: CMakeLists.txt  package.xml
src/armbot_py_examples/: package.xml  setup.cfg  setup.py
src/armbot_remote/: CMakeLists.txt  package.xml
src/armbot_remote/armbot_remote/: alexa_interface.py  task_server.py
src/armbot_remote/launch/: remote_interface.launch.py
src/armbot_remote/src/: task_server.cpp
src/armbot_utils/: CMakeLists.txt  package.xml
src/cpp_examples/: package.xml
src/py_examples/: package.xml  setup.py
(+22 files in other folders)
